Car, UserConsole 클래스 수정 / 테스트 케이스 추가